<resources>
    <string name="app_name">iTunesApp</string>


    <!-- SearchAlbumActivity -->
    <string name="search_album_hint">Search an album</string>
    <string name="genre_name">Genre</string>
    <string name="album_name">Album Name</string>
    <string name="group_name">Group Name</string>
    <string name="search_album_title">Top Albums</string>

    <!-- AlbumDetailActivity -->
    <string name="tracks_amount">Tracks amount</string>
    <string name="track_release_date">Release Date</string>
    <string name="track_number">1</string>
    <string name="track_name">Track Name</string>
    <string name="track_duration">0:00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- MediaPlayerActivity -->
    <string name="album_name_track_view">Album Name</string>
    <string name="track_name_track_view">Track Name</string>
    <string name="band_name_track_view">Band Name</string>
    <string name="track_time_track_view_start">0:00</string>
    <string name="track_time_track_view_end">0:29</string>
</resources>