<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/album_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="90dp"
        android:maxHeight="90dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_image_50"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/genre_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="6dp"
        android:text="@string/genre_name"/>

    <TextView
        android:id="@+id/album_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/album_name"/>

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/group_name"/>

</LinearLayout>