<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragment.MediaPlayerFragment">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
    <TextView
        android:id="@+id/album_name_track_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textSize="16sp"
        android:text="@string/album_name_track_view"
        style="@style/MainTextStyle"
        android:gravity="center"
        />

    <ImageView
        android:id="@+id/album_image_track_view"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/track_default_icon"
        />

    <TextView
        android:id="@+id/track_name_track_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:text="@string/track_name_track_view"
        android:textSize="20sp"
        style="@style/MainTextStyle"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:singleLine="true"
        android:scrollHorizontally="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit ="marquee_forever"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"/>

        <TextView
            android:id="@+id/band_name_track_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/band_name_track_view"
            android:textSize="14sp"
            style="@style/ExtraTextStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <SeekBar
            android:id="@+id/music_player_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/music_time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                style="@style/ExtraTextStyle"
                android:text="@string/track_time_track_view_start"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/music_time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginEnd="10dp"
                style="@style/ExtraTextStyle"
                android:text="@string/track_time_track_view_end"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp">

        <ImageButton
            android:id="@+id/prev_track_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_skip_previous"
            app:layout_constraintEnd_toStartOf="@id/play_button"
            android:background="#14FFFFFF"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_baseline_play_circle"
            android:background="#14FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/next_tack_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_skip_next"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="#14FFFFFF"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toEndOf="@id/play_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>